# quadkey-boosted

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/: overview.md
quadkey/: __init__.py  __main__.py  quadkey.py  utils.pyx
quadkey/core/: __init__.py  test_c_code.py  utils.c  utils.html  utils.pyx
src/: _build_utils.py
src/quadkey/: __init__.py  __main__.py  quadkey.py  utils.pyx
src/quadkey_boosted.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
