[build-system]
requires = ["wheel", "Cython"]
build-backend = "setuptools.build_meta"
[tool.bumpver]
current_version = "1.0.1"
version_pattern = "{major}.{minor}.{patch}"
commit = True
tag = True
tag_name = "v{version}"

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"']
"quadkey/__init__.py" = ['__version__ = "{version}"']